fix splash page buttons overlap

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -102,11 +102,11 @@
 }
 
 .logo-link {
-    width: 170px;
-    height: 170px;
-    padding-top:13px;
+    width: inherit;
+    height: inherit;
+    // padding-bottom: 23px;
     background: transparent;
-    z-index: 13;
+    z-index: 15;
 }
 
 .create-route-link {
@@ -122,6 +122,7 @@
     background: white;
     border: 3px solid lightgrey;
     border-radius: 5%;
+    z-index: 10;
 }
 
 .create-route-link:hover {
@@ -140,6 +141,7 @@
     padding-left: 10px;
     margin-right: 20px;
     margin-top: 20px;
+    z-index: 10;
 }
 
 .view-routes-link:hover {
